update: Update language support features

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,7 +34,7 @@
         "description": "Configure fields for each property type"
       },
       "facebook": {
-        "title": "Facebook",
+        "title": "Facebook (BETA)",
         "description": "Automatically publish your properties"
       },
       "portfolio": {
@@ -69,6 +69,182 @@
       "configureUsername": "⚠️ First set up your username in your profile",
       "exportSuccess": "✅ Properties exported successfully",
       "exportError": "Error exporting. Please try again."
+    }
+  },
+  "currency": {
+    "title": "Default Currency",
+    "loading": "Loading...",
+    "infoTitle": "What is the default currency?",
+    "infoDescription": "This will be the currency that appears preselected when you create new properties. You can change it at any time for each individual property.",
+    "currentCurrency": "Current currency",
+    "selectCurrency": "Select your currency",
+    "system": "System",
+    "yourDefault": "Your default",
+    "important": "Important",
+    "note1": "This setting only affects new properties",
+    "note2": "Existing properties keep their original currency",
+    "note3": "You can change the currency when creating or editing each property",
+    "note4": "There is no automatic price conversion",
+    "saveButton": "Save default currency",
+    "saving": "Saving...",
+    "mustSelect": "You must select a currency",
+    "alreadyDefault": "This is already your default currency",
+    "errorLoading": "Error loading settings"
+  },
+  "watermark": {
+    "title": "Logo",
+    "loading": "Loading...",
+    "infoTip": "Upload a logo to appear automatically on all your property photos. If you don't upload a logo, the text \"Flow Estate AI\" will be used.",
+    "yourLogo": "Your Logo",
+    "changeLogo": "Change Logo",
+    "delete": "Delete",
+    "uploading": "Uploading...",
+    "noCustomLogo": "No custom logo",
+    "defaultText": "The text \"FlowEstate AI\" will be used by default",
+    "uploadLogo": "Upload Logo",
+    "recommendations": "Recommendations",
+    "recSize": "Recommended size: 200x200 pixels",
+    "recFormat": "Format: PNG (with transparent background) or JPG",
+    "recMaxSize": "Maximum size: 2 MB",
+    "recSquare": "Square logo works best",
+    "settings": "Logo Settings",
+    "position": "Position on Photo",
+    "topLeft": "Top Left",
+    "topRight": "Top Right",
+    "bottomLeft": "Bottom Left",
+    "bottomRight": "Bottom Right",
+    "positionNote": "The text \"FlowEstate AI\" always appears in the bottom left",
+    "size": "Logo Size",
+    "small": "Small",
+    "medium": "Medium",
+    "large": "Large",
+    "saveSettings": "Save Settings",
+    "saving": "Saving...",
+    "preview": "Preview",
+    "previewNote": "The logo will be automatically applied to all photos you upload",
+    "logoUploaded": "✅ Logo uploaded successfully",
+    "logoDeleted": "✅ Logo deleted",
+    "settingsSaved": "✅ Settings saved",
+    "confirmDelete": "Delete custom logo? Default text will be used.",
+    "imageTooLarge": "Image is too large. Maximum 2MB.",
+    "onlyImages": "Only PNG or JPG images are allowed.",
+    "errorUpload": "Error uploading logo",
+    "errorDelete": "Error deleting logo",
+    "errorSave": "Error saving settings"
+  },
+  "facebook": {
+    "title": "Facebook",
+    "loading": "Loading...",
+    "importantNote": "If you want to use this feature, please contact the project administrators.",
+    "connectionStatus": "Connection Status",
+    "connected": "Connected",
+    "page": "Page",
+    "connectedOn": "Connected on",
+    "howToPublish": "How to publish",
+    "step1": "Go to Dashboard",
+    "step2": "Click the Facebook button on any property",
+    "step3": "Your property will be published automatically!",
+    "disconnect": "Disconnect Facebook",
+    "disconnecting": "Disconnecting...",
+    "notConnected": "Not connected",
+    "notConnectedDesc": "Connect your Facebook page to start publishing",
+    "requirements": "Requirements",
+    "req1": "Have a Facebook Page (not a personal profile)",
+    "req2": "Be an administrator of the page",
+    "req3": "Accept the requested permissions",
+    "connectButton": "Connect with Facebook",
+    "connecting": "Opening Facebook...",
+    "aiTitle": "Enhance Your Posts with AI",
+    "aiToggleTitle": "Generate automatic designs",
+    "aiToggleDesc": "The first image will be converted into a professional flyer with your brand",
+    "brandColors": "Your brand colors",
+    "primaryColor": "Primary color",
+    "secondaryColor": "Secondary color",
+    "designStyle": "Design style",
+    "modern": "Modern",
+    "elegant": "Elegant",
+    "minimalist": "Minimalist",
+    "vibrant": "Vibrant",
+    "saveConfig": "Save Configuration",
+    "faqTitle": "Frequently Asked Questions",
+    "faqQ1": "What type of account do I need?",
+    "faqA1": "You need a Facebook Page, not a personal profile. Pages are for businesses and professionals.",
+    "faqQ2": "Is it safe to connect my page?",
+    "faqA2": "Yes, we only request permissions to publish. We cannot see private messages or personal information.",
+    "faqQ3": "Can I change pages?",
+    "faqA3": "Yes, disconnect the current one and connect another page whenever you want.",
+    "connectedSuccess": "✅ Facebook connected successfully",
+    "disconnectedSuccess": "✅ Page disconnected",
+    "configSaved": "✅ Configuration saved",
+    "confirmDisconnect": "Disconnect your Facebook page?",
+    "errorAuth": "Authentication error. Please try again.",
+    "errorNoPages": "You don't have Facebook pages. Create a page first.",
+    "errorServer": "Server error. Please try later.",
+    "errorDenied": "Access denied. Please accept the permissions.",
+    "allowPopups": "⚠️ Please allow pop-ups to connect with Facebook"
+  },
+  "mobileLayout": {
+    "upgrade": "Upgrade",
+    "pro": "Pro",
+    "free": "Free",
+    "inicio": "Home",
+    "analiticas": "Analytics",
+    "ajustes": "Settings",
+    "perfil": "Profile"
+  },
+  "analytics": {
+    "title": "My Business",
+    "loading": "Loading analytics...",
+    "noData": "No data available",
+    "noDataDesc": "Create your first property to see your analytics",
+    "createProperty": "Create Property",
+    "inventory": "Your Inventory",
+    "totalProperties": "Total properties",
+    "active": "Active",
+    "byCurrency": "By currency",
+    "recentlyAdded": "property added",
+    "recentlyAddedPlural": "properties added",
+    "thisWeek": "this week",
+    "distribution": "Distribution by Type",
+    "byListingType": "By listing type",
+    "sale": "Sale",
+    "rent": "Rent",
+    "pricing": "Pricing",
+    "average": "Average",
+    "minimum": "Minimum",
+    "maximum": "Maximum",
+    "distributionRange": "Distribution",
+    "propertyStatus": "Property Status",
+    "statusActive": "Active",
+    "statusPending": "Pending",
+    "statusSold": "Sold",
+    "statusRented": "Rented",
+    "needsAttention": "Properties that need attention",
+    "notUpdated30Days": "Not updated in 30+ days",
+    "lessThan5Photos": "Less than 5 photos",
+    "noMapLocation": "No map location",
+    "tapToSeeList": "Tap to see list",
+    "recentActivity": "Last 7 days",
+    "created": "Created",
+    "edited": "Edited",
+    "sold": "Sold",
+    "rented": "Rented",
+    "topLocations": "Your top locations (Top 5)",
+    "propertyPerformance": "Property Performance",
+    "viewsUnlocked": "View Analytics Unlocked!",
+    "totalViewsReached": "You have reached {count} total views",
+    "totalViews": "Total views",
+    "averageViews": "Average",
+    "comingSoon": "Coming soon: Most viewed properties ranking",
+    "unlockViews": "Unlock view metrics by sharing your properties more",
+    "progress": "Progress",
+    "shareYourProperties": "Share your properties on",
+    "propertyTypes": {
+      "house": "🏠 House",
+      "condo": "🏢 Condo",
+      "apartment": "🏘️ Apartment",
+      "land": "🌳 Land",
+      "commercial": "🏪 Commercial"
     }
   }
 }
