--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -34,7 +34,7 @@
         "description": "Configura campos para cada tipo de propiedad"
       },
       "facebook": {
-        "title": "Facebook",
+        "title": "Facebook (BETA)",
         "description": "Publica automáticamente tus propiedades"
       },
       "portfolio": {
@@ -69,6 +69,182 @@
       "configureUsername": "⚠️ Primero configura tu username en tu perfil",
       "exportSuccess": "✅ Propiedades exportadas exitosamente",
       "exportError": "Error al exportar. Intenta nuevamente."
+    }
+  },
+  "currency": {
+    "title": "Divisa por Defecto",
+    "loading": "Cargando...",
+    "infoTitle": "¿Qué es la divisa por defecto?",
+    "infoDescription": "Esta será la divisa que aparecerá preseleccionada cuando crees nuevas propiedades. Puedes cambiarla en cualquier momento para cada propiedad individual.",
+    "currentCurrency": "Divisa actual",
+    "selectCurrency": "Selecciona tu divisa",
+    "system": "Sistema",
+    "yourDefault": "Tu default",
+    "important": "Importante",
+    "note1": "Esta configuración solo afecta nuevas propiedades",
+    "note2": "Las propiedades existentes mantienen su divisa original",
+    "note3": "Puedes cambiar la divisa al crear o editar cada propiedad",
+    "note4": "No hay conversión automática de precios",
+    "saveButton": "Guardar divisa por defecto",
+    "saving": "Guardando...",
+    "mustSelect": "Debes seleccionar una divisa",
+    "alreadyDefault": "Esta ya es tu divisa por defecto",
+    "errorLoading": "Error al cargar la configuración"
+  },
+  "watermark": {
+    "title": "Logo",
+    "loading": "Cargando...",
+    "infoTip": "Sube un logo para que aparezca automáticamente en todas las fotos de tus propiedades. Si no subes logo, se usará el texto \"Flow Estate AI\".",
+    "yourLogo": "Tu Logo",
+    "changeLogo": "Cambiar Logo",
+    "delete": "Eliminar",
+    "uploading": "Subiendo...",
+    "noCustomLogo": "Sin logo personalizado",
+    "defaultText": "Se usará el texto \"FlowEstate AI\" por defecto",
+    "uploadLogo": "Subir Logo",
+    "recommendations": "Recomendaciones",
+    "recSize": "Tamaño recomendado: 200x200 píxeles",
+    "recFormat": "Formato: PNG (con fondo transparente) o JPG",
+    "recMaxSize": "Tamaño máximo: 2 MB",
+    "recSquare": "Logo cuadrado funciona mejor",
+    "settings": "Configuración del Logo",
+    "position": "Posición en la Foto",
+    "topLeft": "Superior Izq.",
+    "topRight": "Superior Der.",
+    "bottomLeft": "Inferior Izq.",
+    "bottomRight": "Inferior Der.",
+    "positionNote": "El texto \"FlowEstate AI\" siempre aparece en inferior izquierda",
+    "size": "Tamaño del Logo",
+    "small": "Pequeño",
+    "medium": "Mediano",
+    "large": "Grande",
+    "saveSettings": "Guardar Configuración",
+    "saving": "Guardando...",
+    "preview": "Vista Previa",
+    "previewNote": "El logo se aplicará automáticamente a todas las fotos que subas",
+    "logoUploaded": "✅ Logo subido correctamente",
+    "logoDeleted": "✅ Logo eliminado",
+    "settingsSaved": "✅ Configuración guardada",
+    "confirmDelete": "¿Eliminar logo personalizado? Se usará el texto por defecto.",
+    "imageTooLarge": "La imagen es muy grande. Máximo 2MB.",
+    "onlyImages": "Solo se permiten imágenes PNG o JPG.",
+    "errorUpload": "Error al subir logo",
+    "errorDelete": "Error al eliminar logo",
+    "errorSave": "Error al guardar configuración"
+  },
+  "facebook": {
+    "title": "Facebook",
+    "loading": "Cargando...",
+    "importantNote": "Sí desea utilizar esta función por favor comunicarselo a los administradores del proyecto.",
+    "connectionStatus": "Estado de Conexión",
+    "connected": "Conectado",
+    "page": "Página",
+    "connectedOn": "Conectado el",
+    "howToPublish": "Cómo publicar",
+    "step1": "Ve al Dashboard",
+    "step2": "Click en el botón de Facebook en cualquier propiedad",
+    "step3": "¡Tu propiedad se publicará automáticamente!",
+    "disconnect": "Desvincular Facebook",
+    "disconnecting": "Desvinculando...",
+    "notConnected": "No conectado",
+    "notConnectedDesc": "Conecta tu página de Facebook para empezar a publicar",
+    "requirements": "Requisitos",
+    "req1": "Tener una Página de Facebook (no perfil personal)",
+    "req2": "Ser administrador de la página",
+    "req3": "Aceptar los permisos solicitados",
+    "connectButton": "Conectar con Facebook",
+    "connecting": "Abriendo Facebook...",
+    "aiTitle": "Mejora tus Publicaciones con IA",
+    "aiToggleTitle": "Generar diseños automáticos",
+    "aiToggleDesc": "La primera imagen se convertirá en un flyer profesional con tu marca",
+    "brandColors": "Colores de tu marca",
+    "primaryColor": "Color principal",
+    "secondaryColor": "Color secundario",
+    "designStyle": "Estilo de diseño",
+    "modern": "Moderna",
+    "elegant": "Elegante",
+    "minimalist": "Minimalista",
+    "vibrant": "Vibrante",
+    "saveConfig": "Guardar Configuración",
+    "faqTitle": "Preguntas Frecuentes",
+    "faqQ1": "¿Qué tipo de cuenta necesito?",
+    "faqA1": "Necesitas una Página de Facebook, no un perfil personal. Las páginas son para negocios y profesionales.",
+    "faqQ2": "¿Es seguro conectar mi página?",
+    "faqA2": "Sí, solo solicitamos permisos para publicar. No podemos ver mensajes privados ni información personal.",
+    "faqQ3": "¿Puedo cambiar de página?",
+    "faqA3": "Sí, desvincula la actual y conecta otra página cuando quieras.",
+    "connectedSuccess": "✅ Facebook conectado exitosamente",
+    "disconnectedSuccess": "✅ Página desvinculada",
+    "configSaved": "✅ Configuración guardada",
+    "confirmDisconnect": "¿Desvincular tu página de Facebook?",
+    "errorAuth": "Error de autenticación. Intenta de nuevo.",
+    "errorNoPages": "No tienes páginas de Facebook. Crea una página primero.",
+    "errorServer": "Error del servidor. Intenta más tarde.",
+    "errorDenied": "Acceso denegado. Por favor acepta los permisos.",
+    "allowPopups": "⚠️ Por favor permite ventanas emergentes para conectar con Facebook"
+  },
+  "mobileLayout": {
+    "upgrade": "Upgrade",
+    "pro": "Pro",
+    "free": "Free",
+    "inicio": "Inicio",
+    "analiticas": "Analíticas",
+    "ajustes": "Ajustes",
+    "perfil": "Perfil"
+  },
+  "analytics": {
+    "title": "Mi Negocio",
+    "loading": "Cargando analíticas...",
+    "noData": "Sin datos disponibles",
+    "noDataDesc": "Crea tu primera propiedad para ver tus analíticas",
+    "createProperty": "Crear Propiedad",
+    "inventory": "Tu Inventario",
+    "totalProperties": "Total propiedades",
+    "active": "Activas",
+    "byCurrency": "Por divisa",
+    "recentlyAdded": "propiedad agregada",
+    "recentlyAddedPlural": "propiedades agregadas",
+    "thisWeek": "esta semana",
+    "distribution": "Distribución por Tipo",
+    "byListingType": "Por tipo de listing",
+    "sale": "Venta",
+    "rent": "Alquiler",
+    "pricing": "Precios",
+    "average": "Promedio",
+    "minimum": "Mínimo",
+    "maximum": "Máximo",
+    "distributionRange": "Distribución",
+    "propertyStatus": "Estado de Propiedades",
+    "statusActive": "Activas",
+    "statusPending": "Pendientes",
+    "statusSold": "Vendidas",
+    "statusRented": "Alquiladas",
+    "needsAttention": "Propiedades que necesitan atención",
+    "notUpdated30Days": "Sin actualizar en 30+ días",
+    "lessThan5Photos": "Menos de 5 fotos",
+    "noMapLocation": "Sin ubicación en mapa",
+    "tapToSeeList": "Toca para ver lista",
+    "recentActivity": "Últimos 7 días",
+    "created": "Creadas",
+    "edited": "Editadas",
+    "sold": "Vendidas",
+    "rented": "Alquiladas",
+    "topLocations": "Tus ubicaciones principales (Top 5)",
+    "propertyPerformance": "Rendimiento de Propiedades",
+    "viewsUnlocked": "¡Analíticas de Vistas Desbloqueadas!",
+    "totalViewsReached": "Has alcanzado {count} vistas totales",
+    "totalViews": "Vistas totales",
+    "averageViews": "Promedio",
+    "comingSoon": "Próximamente: Ranking de propiedades más vistas",
+    "unlockViews": "Desbloquea métricas de vistas compartiendo más tus propiedades",
+    "progress": "Progreso",
+    "shareYourProperties": "Comparte tus propiedades en",
+    "propertyTypes": {
+      "house": "🏠 Casa",
+      "condo": "🏢 Condominio",
+      "apartment": "🏘️ Apartamento",
+      "land": "🌳 Terreno",
+      "commercial": "🏪 Comercial"
     }
   }
 }
