enhance: Enhance digital card settings language support and profile page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -246,5 +246,65 @@
       "land": "🌳 Land",
       "commercial": "🏪 Commercial"
     }
+  },
+  "profile": {
+    "title": "My Profile",
+    "loading": "Loading...",
+    "yourPlan": "Your Plan",
+    "pro": "Pro",
+    "free": "Free",
+    "perMonth": "30/month",
+    "total": "3 total",
+    "thisMonth": "this month",
+    "username": "Username",
+    "configured": "Configured",
+    "notConfigured": "Not configured",
+    "agentInfo": "Agent Information",
+    "uniqueUsername": "Unique username",
+    "yourPortfolio": "Your portfolio",
+    "fullName": "Full name",
+    "phone": "Phone",
+    "brokerage": "Brokerage",
+    "saveChanges": "Save Changes",
+    "saving": "Saving...",
+    "upgradeToPro": "Upgrade to Pro",
+    "logout": "Logout",
+    "version": "Flow Estate AI • v1.0.0",
+    "profileUpdated": "✅ Profile updated",
+    "confirmLogout": "Logout?"
+  },
+  "digitalCard": {
+    "title": "Digital Card",
+    "loading": "Loading...",
+    "yourName": "Your Name",
+    "uploadCover": "Upload cover",
+    "changeCover": "Change cover",
+    "uploading": "Uploading...",
+    "cardInfo": "Enter your card information",
+    "name": "Name",
+    "namePlaceholder": "Ex: John Smith",
+    "brokerAgency": "Broker / Agency",
+    "brokerPlaceholder": "Ex: RE/MAX Costa Rica",
+    "bio": "Bio",
+    "bioPlaceholder": "Ex: Real estate agent with 10 years of experience in Guanacaste...",
+    "characters": "characters",
+    "facebook": "Facebook (optional)",
+    "facebookPlaceholder": "https://facebook.com/your-profile",
+    "instagram": "Instagram (optional)",
+    "instagramPlaceholder": "https://instagram.com/your-username",
+    "preview": "Preview",
+    "saveChanges": "Save Changes",
+    "saving": "Saving...",
+    "nameRequired": "Name is required",
+    "cardUpdated": "✅ Card updated successfully",
+    "photoUploaded": "Photo uploaded successfully",
+    "profilePhoto": "Profile photo",
+    "coverPhoto": "Cover photo",
+    "bilingualSection": "🌐 English Version (Optional)",
+    "bilingualNote": "Fill these fields to make your card available in English",
+    "nameEnglish": "Name (English)",
+    "brokerEnglish": "Broker / Agency (English)",
+    "bioEnglish": "Bio (English)",
+    "bioEnglishPlaceholder": "Ex: Real estate agent with 10 years of experience in Guanacaste..."
   }
 }
