--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -246,5 +246,65 @@
       "land": "🌳 Terreno",
       "commercial": "🏪 Comercial"
     }
+  },
+  "profile": {
+    "title": "Mi Perfil",
+    "loading": "Cargando...",
+    "yourPlan": "Tu Plan",
+    "pro": "Pro",
+    "free": "Free",
+    "perMonth": "30/mes",
+    "total": "3 total",
+    "thisMonth": "este mes",
+    "username": "Username",
+    "configured": "Configurado",
+    "notConfigured": "No configurado",
+    "agentInfo": "Información del Agente",
+    "uniqueUsername": "Username único",
+    "yourPortfolio": "Tu portfolio",
+    "fullName": "Nombre completo",
+    "phone": "Teléfono",
+    "brokerage": "Inmobiliaria",
+    "saveChanges": "Guardar Cambios",
+    "saving": "Guardando...",
+    "upgradeToPro": "Actualizar a Pro",
+    "logout": "Cerrar Sesión",
+    "version": "Flow Estate AI • v1.0.0",
+    "profileUpdated": "✅ Perfil actualizado",
+    "confirmLogout": "¿Cerrar sesión?"
+  },
+  "digitalCard": {
+    "title": "Tarjeta Digital",
+    "loading": "Cargando...",
+    "yourName": "Tu Nombre",
+    "uploadCover": "Subir portada",
+    "changeCover": "Cambiar portada",
+    "uploading": "Subiendo...",
+    "cardInfo": "Ingresa la información de tu tarjeta",
+    "name": "Nombre",
+    "namePlaceholder": "Ej: Juan Pérez",
+    "brokerAgency": "Broker / Agencia",
+    "brokerPlaceholder": "Ej: RE/MAX Costa Rica",
+    "bio": "Biografía",
+    "bioPlaceholder": "Ej: Agente inmobiliario con 10 años de experiencia en Guanacaste...",
+    "characters": "caracteres",
+    "facebook": "Facebook (opcional)",
+    "facebookPlaceholder": "https://facebook.com/tu-perfil",
+    "instagram": "Instagram (opcional)",
+    "instagramPlaceholder": "https://instagram.com/tu-usuario",
+    "preview": "Vista Previa",
+    "saveChanges": "Guardar Cambios",
+    "saving": "Guardando...",
+    "nameRequired": "El nombre es requerido",
+    "cardUpdated": "✅ Tarjeta actualizada correctamente",
+    "photoUploaded": "Foto subida exitosamente",
+    "profilePhoto": "Foto de perfil",
+    "coverPhoto": "Foto de portada",
+    "bilingualSection": "🌐 Versión en Inglés (Opcional)",
+    "bilingualNote": "Completa estos campos para que tu tarjeta esté disponible en inglés",
+    "nameEnglish": "Nombre (English)",
+    "brokerEnglish": "Broker / Agency (English)",
+    "bioEnglish": "Bio (English)",
+    "bioEnglishPlaceholder": "Ex: Real estate agent with 10 years of experience in Guanacaste..."
   }
 }
