update: Update language feature implementation in create property workflow and custom fields

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -324,5 +324,104 @@
     "createdWith": "Created with ❤️ by Flow Estate AI",
     "whatsappMessage": "Hello {name}, I saw your digital card and would like to contact you",
     "contactSubject": "Contact from digital card"
+  },
+  "createProperty": {
+    "title": "Create Property",
+    "description": "Upload photos, configure property type and describe by voice",
+    "step1": "Step 1: Property Photos",
+    "step2": "Step 2: Property Configuration",
+    "step3": "Step 3: Voice Description",
+    "step4": "Step 4: Review and Publish",
+    "minPhotos": "You need at least 2 photos",
+    "needVoice": "You need to record the voice description",
+    "propertyType": "Property type",
+    "listingType": "Listing Type",
+    "currency": "Currency",
+    "defaultCurrency": "Default",
+    "currencyTip": "You can change your default currency in Settings",
+    "propertyLanguage": "Property language",
+    "propertyLanguageTip": "This will be the language for the description and how it appears in the portfolio",
+    "customFieldsHint": "Fields to mention in your recording",
+    "customFieldsHintDesc": "Mention these details so the AI can complete them automatically",
+    "noCustomFields": "No custom fields for this combination",
+    "createCustomFields": "Create custom fields",
+    "voiceDescription": "Describe the property: location, price, special features",
+    "generateWithAI": "Generate Description with AI",
+    "generating": "Generating with AI...",
+    "publishing": "Publishing...",
+    "publishProperty": "Publish Property",
+    "house": "House",
+    "condo": "Condo",
+    "apartment": "Apartment",
+    "land": "Land",
+    "commercial": "Commercial",
+    "sale": "Sale",
+    "rent": "Rent",
+    "configuration": "Configuration",
+    "changeConfig": "Change",
+    "changeConfigTip": "To change, you must regenerate the listing",
+    "title": "Title",
+    "description": "Description",
+    "price": "Price",
+    "optional": "Optional",
+    "address": "Address",
+    "city": "City",
+    "state": "State / Province",
+    "zipCode": "Zip Code",
+    "showOnMap": "Show location on map",
+    "propertyCountry": "Property country",
+    "countryDetected": "Country automatically detected by your location. Change it if the property is in another country.",
+    "selectCountry": "Select the country before pasting the Plus Code",
+    "customFields": "Custom Fields",
+    "emptyFieldsWarning": "Some custom fields are empty",
+    "emptyFieldsTip": "You can publish anyway, but we recommend filling them for better presentation",
+    "cancel": "Cancel",
+    "locationRequired": "You must configure the location on the map",
+    "plusCodeRequired": "Plus Code was not generated correctly",
+    "spanish": "Español",
+    "english": "English"
+  },
+  "customFields": {
+    "title": "Custom Fields",
+    "tip": "Create custom fields for each property type. These fields will appear when creating/editing properties of that type.",
+    "totalFields": "Total fields created",
+    "createNew": "Create New Field",
+    "editField": "Edit Field",
+    "newField": "New Custom Field",
+    "propertyType": "Property Type",
+    "listingType": "Listing State",
+    "fieldsInCombo": "fields in this combination",
+    "editingFor": "Editing field for",
+    "fieldIcon": "Field Icon",
+    "iconSelected": "Selected icon",
+    "clickToChange": "Click to change",
+    "fieldName": "Field Name (Spanish)",
+    "fieldNamePlaceholder": "Ex: Frente al mar",
+    "maxChars": "Maximum 30 characters to avoid crowding",
+    "fieldNameEn": "Field Name (English)",
+    "fieldNameEnPlaceholder": "Ex: Ocean front",
+    "bilingualTip": "Enter the name in both languages so it displays correctly according to the property language",
+    "fieldType": "Field Type",
+    "placeholder": "Placeholder (optional)",
+    "placeholderText": "Help text",
+    "save": "Save",
+    "update": "Update",
+    "saving": "Saving...",
+    "filterFields": "Filter Fields",
+    "allTypes": "All types",
+    "allStates": "All states",
+    "clearFilters": "Clear filters",
+    "fieldsCreated": "Fields Created",
+    "noFields": "No custom fields",
+    "createFirst": "Create your first field to start",
+    "cloneField": "Clone Field",
+    "fieldToClone": "Field to clone",
+    "from": "From",
+    "cloneTo": "Clone to",
+    "fieldsInDestination": "fields in destination",
+    "clone": "Clone",
+    "cloning": "Cloning...",
+    "text": "Text",
+    "number": "Number"
   }
 }
