--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -324,5 +324,104 @@
     "createdWith": "Creado con ❤️ por Flow Estate AI",
     "whatsappMessage": "Hola {name}, vi tu tarjeta digital y me gustaría contactarte",
     "contactSubject": "Contacto desde tarjeta digital"
+  },
+  "createProperty": {
+    "title": "Crear Propiedad",
+    "description": "Sube fotos, configura el tipo de propiedad y describe por voz",
+    "step1": "Paso 1: Fotos de la Propiedad",
+    "step2": "Paso 2: Configuración de Propiedad",
+    "step3": "Paso 3: Descripción por Voz",
+    "step4": "Paso 4: Revisar y Publicar",
+    "minPhotos": "Necesitas al menos 2 fotos",
+    "needVoice": "Necesitas grabar la descripción por voz",
+    "propertyType": "Tipo de propiedad",
+    "listingType": "Tipo de Listing",
+    "currency": "Divisa",
+    "defaultCurrency": "Por defecto",
+    "currencyTip": "Puedes cambiar tu divisa por defecto en Configuración",
+    "propertyLanguage": "Idioma de la propiedad",
+    "propertyLanguageTip": "Este será el idioma en que se generará la descripción y aparecerá en el portfolio",
+    "customFieldsHint": "Campos a mencionar en tu grabación",
+    "customFieldsHintDesc": "Menciona estos detalles para que la IA los complete automáticamente",
+    "noCustomFields": "No hay campos personalizados para esta combinación",
+    "createCustomFields": "Crear campos personalizados",
+    "voiceDescription": "Describe la propiedad: ubicación, precio, características especiales",
+    "generateWithAI": "Generar Descripción con IA",
+    "generating": "Generando con IA...",
+    "publishing": "Publicando...",
+    "publishProperty": "Publicar Propiedad",
+    "house": "Casa",
+    "condo": "Condominio",
+    "apartment": "Apartamento",
+    "land": "Terreno",
+    "commercial": "Comercial",
+    "sale": "Venta",
+    "rent": "Alquiler",
+    "configuration": "Configuración",
+    "changeConfig": "Cambiar",
+    "changeConfigTip": "Para cambiar, debes regenerar el listing",
+    "title": "Título",
+    "description": "Descripción",
+    "price": "Precio",
+    "optional": "Opcional",
+    "address": "Dirección",
+    "city": "Ciudad",
+    "state": "Estado / Provincia",
+    "zipCode": "Código Postal",
+    "showOnMap": "Mostrar ubicación en mapa",
+    "propertyCountry": "País de la propiedad",
+    "countryDetected": "País detectado automáticamente por tu ubicación. Cámbialo si la propiedad está en otro país.",
+    "selectCountry": "Selecciona el país antes de pegar el Plus Code",
+    "customFields": "Campos Personalizados",
+    "emptyFieldsWarning": "Algunos campos personalizados están vacíos",
+    "emptyFieldsTip": "Puedes publicar de todas formas, pero te recomendamos llenarlos para una mejor presentación",
+    "cancel": "Cancelar",
+    "locationRequired": "Debes configurar la ubicación en el mapa",
+    "plusCodeRequired": "El Plus Code no se generó correctamente",
+    "spanish": "Español",
+    "english": "English"
+  },
+  "customFields": {
+    "title": "Campos Personalizados",
+    "tip": "Crea campos personalizados para cada tipo de propiedad. Estos campos aparecerán al crear/editar propiedades de ese tipo.",
+    "totalFields": "Total de campos creados",
+    "createNew": "Crear Nuevo Campo",
+    "editField": "Editar Campo",
+    "newField": "Nuevo Campo Personalizado",
+    "propertyType": "Tipo de Propiedad",
+    "listingType": "Estado del Listing",
+    "fieldsInCombo": "campos en esta combinación",
+    "editingFor": "Editando campo de",
+    "fieldIcon": "Icono del Campo",
+    "iconSelected": "Icono seleccionado",
+    "clickToChange": "Click para cambiar",
+    "fieldName": "Nombre del Campo",
+    "fieldNamePlaceholder": "Ej: Frente al mar",
+    "maxChars": "Máximo 30 caracteres para evitar que se vea agolpado",
+    "fieldNameEn": "Nombre en Inglés",
+    "fieldNameEnPlaceholder": "Ex: Ocean front",
+    "bilingualTip": "Ingresa el nombre en ambos idiomas para que se muestre correctamente según el idioma de la propiedad",
+    "fieldType": "Tipo de Campo",
+    "placeholder": "Placeholder (opcional)",
+    "placeholderText": "Texto de ayuda",
+    "save": "Guardar",
+    "update": "Actualizar",
+    "saving": "Guardando...",
+    "filterFields": "Filtrar Campos",
+    "allTypes": "Todos los tipos",
+    "allStates": "Todos los estados",
+    "clearFilters": "Limpiar filtros",
+    "fieldsCreated": "Campos Creados",
+    "noFields": "No hay campos personalizados",
+    "createFirst": "Crea tu primer campo para empezar",
+    "cloneField": "Clonar Campo",
+    "fieldToClone": "Campo a clonar",
+    "from": "Desde",
+    "cloneTo": "Clonar hacia",
+    "fieldsInDestination": "campos en el destino",
+    "clone": "Clonar",
+    "cloning": "Clonando...",
+    "text": "Texto",
+    "number": "Número"
   }
 }
